style what we do section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
 
         <!--"what we do" section-->
-        <section id="#what-we-do">
+        <section id="#what-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis doloremque at voluptatum est ratione corporis eaque perspiciatis ut deserunt unde assumenda laborum, explicabo voluptatibus neque quas alias. Perspiciatis, fugiat vitae.
