updated nav links

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
 
         <!--"reach out" section-->
-        <section>
+        <section id="#reach-out">
             <h2>Reach Out</h2>
         </section>
 
