meet the trainers section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </section>
 
         <!--"what we do" section-->
-        <section id="#what-we-do" class="intro">
+        <section id="what-we-do" class="intro">
             <h2 class="section-title primary-border"> What We Do</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis doloremque at voluptatum est ratione corporis eaque perspiciatis ut deserunt unde assumenda laborum, explicabo voluptatibus neque quas alias. Perspiciatis, fugiat vitae.
@@ -72,7 +72,7 @@
         </section>
 
         <!--"what you do" section-->
-        <section id="#what-you-do" class="steps">
+        <section id="what-you-do" class="steps">
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
@@ -101,12 +101,46 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section id="#meet-the-trainers">
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed/Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque ea officia veniam omnis! Deleniti, quam sit velit hic quas facilis eligendi facere est ipsam nisi in ducimus incidunt sapiente?
+                    </p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora rem consequatur qui impedit, asperiores maxime in error dolorum beatae et voluptatem hic quo? Aliquam, eius qui? Ducimus explicabo possimus assumenda?
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, velit quas esse optio facilis ratione architecto eius fugit maxime quod totam aperiam similique molestias blanditiis cumque, debitis, omnis tenetur! Neque.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!--"reach out" section-->
-        <section id="#reach-out">
+        <section id="reach-out">
             <h2>Reach Out</h2>
         </section>
 
