style contact info

--- a/index.html
+++ b/index.html
@@ -140,14 +140,12 @@
         </section>
 
         <!--"reach out" section-->
-        <section id="reach-out">
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
 
             <div class="contact-info">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11657.909094143826!2d-89.54513290527785!3d43.073460367958845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8807af699fe1afd1%3A0xdbf852b7ce1eaaa8!2s637%20N%20Pleasant%20View%20Rd%2C%20Middleton%2C%20WI%2053562!5e0!3m2!1sen!2sus!4v1645722094389!5m2!1sen!2sus" 
-                    width="400" 
-                    height="400" 
                     style="border:0;" 
                     allowfullscreen="" 
                     loading="lazy">
