add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
 
         <!--jumobtron-->
         <section class="hero">
+
+            <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor iure quisquam libero reprehenderit necessitatibus, hic ducimus? Eaque odio rerum quaerat fugiat dolor corporis reprehenderit optio! Eaque tempore libero aperiam nihil.
+                </p>
+            </div>
+
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p> Fill  out this form and one of our trainers will schedule a consult</p>
