add flexbox to the trainers

--- a/index.html
+++ b/index.html
@@ -160,44 +160,47 @@
         </section>
 
         <!--"meet the trainers" section-->
-        <section id="your-trainers" class="trainers">
+        <section id="your-trainers">
             
             <div class="flex-row">
                 <h2 class="section-title primary-border">
                     Meet The Trainers
                 </h2>
             </div>
+            
+            <div class="trainers">
 
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed/Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque ea officia veniam omnis! Deleniti, quam sit velit hic quas facilis eligendi facere est ipsam nisi in ducimus incidunt sapiente?
-                    </p>
-                </div>
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Arron Stephens</h3>
+                        <h4 class="trainer-role">Speed/Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque ea officia veniam omnis! Deleniti, quam sit velit hic quas facilis eligendi facere est ipsam nisi in ducimus incidunt sapiente?
+                        </p>
+                    </div>
+                </article>
 
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora rem consequatur qui impedit, asperiores maxime in error dolorum beatae et voluptatem hic quo? Aliquam, eius qui? Ducimus explicabo possimus assumenda?
-                    </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
-            </article>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Joanna Gill</h3>
+                        <h4 class="trainer-role">Endurance</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora rem consequatur qui impedit, asperiores maxime in error dolorum beatae et voluptatem hic quo? Aliquam, eius qui? Ducimus explicabo possimus assumenda?
+                        </p>
+                    </div>
+                </article>
 
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
-                <div class="trainer-bio text-left">
-                    <h3>Harry "The Headband" Smith</h3>
-                    <h4>Strength</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, velit quas esse optio facilis ratione architecto eius fugit maxime quod totam aperiam similique molestias blanditiis cumque, debitis, omnis tenetur! Neque.
-                    </p>
+                <article class="trainer">
+                    <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights"/>
+                    <div class="trainer-bio">
+                        <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+                        <h4 class="trainer-role">Strength</h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, velit quas esse optio facilis ratione architecto eius fugit maxime quod totam aperiam similique molestias blanditiis cumque, debitis, omnis tenetur! Neque.
+                        </p>
+                    </div>
                 </div>
             </article>
         </section>
